Fix code-checker issues